added client building automation

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,18 @@
 version: '3'
 
 services:
-  flask-server:
+  server:
     build:
       context: ./server/
       dockerfile: Dockerfile
-    image: kelach/lenet5a_model:1.0
     ports:
       - "5000:5000"
   client:
-    build
+    depends_on:
+      - server
+    build:
+      context: ./client/
+      dockerfile: Dockerfile
+    ports:
+      - "3000:3000"
+  
