--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,16 +1,33 @@
 ---
-
 version: '3'
 
 services:
+  redis-db:
+      container_name: db
+      image: redis:7
+      ports:
+        - "6379:6379"
+      command: --save 1 1
+      volumes:
+        - ./server/data:/data
+      user: "1000:1000"
+
   server:
+    container_name: server
+    depends_on:
+      - redis-db
     build:
       context: ./server/
       dockerfile: Dockerfile
     ports:
       - "5000:5000"
+    expose:
+      - "5000"
+    environment:
+      - REDIS_HOSTNAME=redis-db
   
   client:
+    container_name: client
     depends_on:
       - server
     build:
@@ -20,4 +37,5 @@ services:
       - "3000:3000"
     volumes:
       - ./client/src:/app/src
-  
+    environment:
+      - REDIS_PORT=6379
