--- a/client/docker-compose.yaml
+++ b/client/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 
 services:
   client:
+    container_name: client
     build:
       context: .
       dockerfile: "Dockerfile"
@@ -10,3 +11,4 @@ services:
       - "3000:3000"
     volumes:
       - ./src:/app/src
+    
