added dockerfile for client

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,12 +4,15 @@ RUN mkdir /app
 # Copying configuaration files
 COPY public /app/
 COPY src /app/
-COPY *.json /app/ 
-COPY *.yaml /app/
-COPY *.ts /app/
-COPY *.cjs /app/
-COPY *.html /app/
+COPY package.json /app/ 
+COPY package-lock.json /app/ 
+COPY tsconfig.json /app/ 
+COPY pnpm-lock.yaml /app/
+COPY tsconfig.node.json /app/
+COPY vite.config.ts /app/
+COPY .eslintrc.cjs /app/
+COPY index.html /app/
 
 WORKDIR /app
 RUN npm install
-CMD ["npm","run", "dev", "--", "--port", "3000"]
+CMD ["npm","run", "dev", "--", "--port", "3000", "--host", "0.0.0.0"]
