--- a/server/docker-compose.yaml
+++ b/server/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         - "6379:6379"
       command: --save 1 1
       volumes:
-        - ./db-data:/db-data
+        - ./data:/data
       user: "1000:1000"
 
   server:
