--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,6 +16,7 @@ services:
     container_name: server
     depends_on:
       - redis-db
+    image: kelach/bevo-bud-the-gpt_server:1.0
     build:
       context: ./server/
       dockerfile: Dockerfile
@@ -26,6 +27,7 @@ services:
     container_name: client
     depends_on:
       - server
+    image: kelach/bevo-bud-the-gpt_client:1.0
     build:
       context: ./client/
       dockerfile: Dockerfile
